--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "cors": "^2.8.5",
     "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
+    "firebase-admin": "^11.5.0",
     "lodash": "^4.17.21",
+    "minimatch": "^6.2.0",
     "moment": "^2.29.4",
     "mongodb": "^4.13.0",
     "mongoose": "^6.8.3",
@@ -49,7 +51,7 @@
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
+    "rimraf": "^4.1.2",
     "rxjs": "^7.2.0",
     "socket.io": "^4.5.4",
     "swagger-ui-express": "^4.6.0"
